syntax = "proto3";

import "scalapb/scalapb.proto";
option (scalapb.options) = {
    package_name: "io.logbee.keyscore.model"
    flat_package: true
};

message Dataset {
    MetaData metadata = 1;
    repeated Record records = 2;
}

message MetaData {
    repeated Label labels = 1;
}

message Label {
    string name = 1;
    oneof value_type {
        string text = 16;
        double decimal = 17;
        int64 number = 18;
    }
}

message Record {
    repeated Field fields = 2;
}

message Field {
    option (scalapb.message).extends = "io.logbee.keyscore.model.BaseField";
    string name = 1;
    oneof value_type {
        TextValue text = 16;
        NumberValue number = 17;
        DecimalValue decimal = 18;
        TimestampValue timestamp = 19;
    }
}

message TextValue {
    string text = 1;
}

message NumberValue {
    int64 number = 1;
}

message DecimalValue {
    double decimal = 1;
}

message TimestampValue {
    int64 timestamp = 1;
}
